recursion.cons.lessons.recursion.cons.Min.scala.error
min:3: error: type mismatch;
 found   : List[Int]
 required: Int
		return l.tail
                         ^min:4: error: type mismatch;
 found   : Boolean
 required: Int
	else return min(min2(l.head, l.tail.head)::l.tail.tail)
                                                 ^