recursion.cons.lessons.recursion.cons.Min.scala.code
def min(l:List[Int]): Int = {
	if (l.tail.length == 0)
		return l.tail
	else return min(min2(l.head, l.tail.head)::l.tail.tail)
	
}

def min2(a:Int, b:Int): Boolean = {
	if (a < b)
		return true
	else return false
}
